--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,12 @@
     <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
     <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_trending">Trending</string>
     <string name="title_notifications">Notifications</string>
+    <string name="movie_list">Movie List</string>
 
     <string name="home_second">Home Second</string>
+    <string name="last_person">Oui</string>
+    <string name="trending_peole">People</string>
+    <string name="trending_categories">Categories</string>
 </resources>
